--- a/.github/workflows/github-pages.yaml
+++ b/.github/workflows/github-pages.yaml
@@ -7,10 +7,12 @@ on:
 
 jobs:
   build:
+    name: Publish site
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: shalzz/zola-deploy-action@v0.13.0
+      - name: Checkout main
+        uses: actions/checkout@v3.0.0
+      - name: Build and deploy
+        uses: shalzz/zola-deploy-action@v0.17.2
         env:
-          PAGES_BRANCH: gh-pages
-          TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
